--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <div class="players">
             <!-- player one random image -->
             <div>
-                <img class="player-one-img" src="/images/scissors.png" alt="">
+                <img class="player-one-img" src="images/scissors.png" alt="">
                 <h3>Player One</h3>
                 <button class="player-one">Play</button>
             </div>
 `
             <!-- computer random image -->
             <div>
-                <img class="player-two-img" src="/images/paper.png" alt="">
+                <img class="player-two-img" src="images/paper.png" alt="">
                 <h3>Player Two</h3>
                 <button class="player-two">Play</button>
             </div>
